2013-03-06  Jean-Louis Martineau <martineau@zmanda.com>
	* Too many files to list them.
	* tape pool
	    label are assigned to a tape pool,
	    the 'labelstr' is used only for tape that are not in a pool.
	* retention policies
	    amanda will never rewrite a tape if it is required to satisfy a
	    retention policies.
	* storage, include many global setting.
	* tapelist file: include POOL, STORAGE and CONFIG.

2013-03-06  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h: Remove the debug variable.
	* common-src/util.c: Use maxint_t to parse the crc size.

2013-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndmjob_job.c: Call jndex_merge_environment() after reading
	  the index file.

2013-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/device.c: Add the device_sync_catalog function.
	* device-src/device.h: Add prototype for the sync_catalog function.
	* device-src/property.c: Add global properties
	* device-src/property.h: Add global properties
	* device-src/s3-device.c: Remove local properties.
	* device-src/xfer-dest-taper-splitter.c: indentation fix.
	* perl/Amanda/Changer.pm: Add the sync_catalog method.
	* perl/Amanda/Changer/multi.pm:Add the sync_catalog method.
	* perl/Amanda/Device.swg: Add the sync_catalog method.
	* server-src/amrmtape.pl: Do not die if erase() fail.
	* server-src/amtape.pl: Add the sync-catalog subcommand.
	* man/xml-source/amtape.8.xml: Document the sync-catalog subcommand.

2013-03-04  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/taper.pl: PARTIAL reply can compute the CRC from
	  varying size.

2013-02-26  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/ScanInventory.pm: Remove leading and trailing space in
	  message from interactivity module. Use $self->{'chg'} instead of
	  $self->{'changer'},
	* perl/Amanda/Taper/Scribe.pm: Fix perl warning.

2013-02-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/single.pm: Keep an inventory.